# eardd

./: .gitignore  LICENSE  README.md  dataset.py  evaluation.py  main.py  metrics.py  pyproject.toml
models/: __init__.py  base.py  efficientnet.py  recce.py  ucf.py  xception.py
